fix(primary-action): dont wrap text

--- a/src/ui/primary-action/_primary-action.scss
+++ b/src/ui/primary-action/_primary-action.scss
@@ -2,6 +2,7 @@
   color: $white;
   font-size: $font-size-md;
   font-weight: 200;
+  white-space: nowrap;
   &:hover,
   &:visited {
     color: $white;
